--- a/ts-class-function/package.json
+++ b/ts-class-function/package.json
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tslint": "^6.1.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.2.0"
   }
 }
