--- a/ts-class-function/package.json
+++ b/ts-class-function/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/eslint": "^6.1.8",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/prettier": "^1.19.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
@@ -36,9 +40,6 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "tslint": "^6.1.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.2.0"
+    "@types/react-dom": "^16.9.5"
   }
 }
